# drone_forest

./: .clang-format  .flake8  .gitignore  CMakeLists.txt  LICENSE.md  README.md  codegen_gegelati.cc  env_config.json  eval_gegelati.cc  eval_rl.py  manual_control.py  params.json  render_eval.cc  rl_config.json  run_gegelati.cc  run_manual.cc  run_manual.py  run_rl.py
drone_forest/: drone.py  forest.py  geometric_objects.py  geometric_utils.py  gym_wrapper.py  lidar.py  render_utils.py  simulation.py  tree.py
include/drone_forest/: drone.h  drone_forest.h  forest.h  gegelati_wrapper.h  geometric.h  instructions.h  json_parser.h  lidar.h  simulation.h  tree.h
include/drone_forest/geometric/: circle.h  line.h  point.h  rectangle.h  shape.h
scripts/: CMakeLists.txt  get_net_params.py  gif_creator.py  gym_wrapper.py  gym_wrapper_old.py  json_utils.py
scripts/src/: drone_forest_py.cc
src/: CMakeLists.txt  drone.cc  drone_forest.cc  forest.cc  gegelati_wrapper.cc  geometric.cc  instructions.cc  json_parser.cc  lidar.cc  simulation.cc  tree.cc
src/geometric/: circle.cc  line.cc  point.cc  rectangle.cc  shape.cc
test/: test_forest.py  test_geometric.py  test_lidar.py  test_tree.py
tests/: CMakeLists.txt  testdrone.cc  testforest.cc  testgeometric.cc  testlidar.cc
